# copilota

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
src/copilota/: cli.py  config.py
src/copilota/core/: embedder.py  indexer.py  rag.py  retriever.py
src/copilota/llm/: base.py  factory.py  ollama.py  ollama_real.py
src/copilota/parser/: base.py  go.py  javascript.py  php.py  python.py  registry.py  rust.py
src/copilota/storage/: models.py  vector_db.py
tests/: test_core.py  test_parsers.py  test_storage.py
